--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,23 +1,25 @@
 name: Compile JAR
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
 
 jobs:
-	build:
-		runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
     
-		steps:
-			- uses: actions/checkout@v4
-	 		- name: Setup JDK
-			  uses: actions/setup-java@v2
-			  with:
-			    java-version: "11"
-			- name: Build JAR
-			  run: |
-			   javac source/Main.java
-  			 jar cfm ManoCraft.jar Manifest.txt *.class
-			- name: Upload Artifact
-			  uses: actions/upload-artifact@v2
-			  with:
-				  name: Artifact
-		  		path: ./ManoCraft.jar
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: "11"
+      - name: Build JAR
+        run: |
+          javac source/Main.java
+          jar cfm ManoCraft.jar Manifest.txt *.class
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: Artifact
+          path: ./ManoCraft.jar
