--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-java@v4.2.1
         with:
           java-version: "21"
-          distribution: "termurin"
+          distribution: "temurin"
       - name: Build JAR
         run: |
           javac source/Main.java
