--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -15,12 +15,14 @@ jobs:
         with:
           java-version: "21"
           distribution: "temurin"
-      - name: Build JAR
+      - name: Setup Gradle
+        uses: gradle/actions@v3.4.1
+      - name: Build with Gradle
         run: |
-          cd source
-          javac Main.java
+          gradle -v
+          gradle build
       - name: Upload Artifact
         uses: actions/upload-artifact@v4.3.3
         with:
-          name: Artifact
+          name: Source
           path: .
