--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -16,7 +16,7 @@ jobs:
           java-version: "21"
           distribution: "temurin"
       - name: Setup Gradle
-        uses: gradle/actions@v3.4.1
+        uses: gradle/actions/setup-gradle@v3
       - name: Build with Gradle
         run: |
           gradle -v
