--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 group "com.manocraft"
 version "0.0.1-T"
 
-project.ext.lwjgl "3.3.3"
+project.ext.lwjglVersion "3.3.3"
 
 repositories {
 	mavenCentral()
