--- a/app/src/build.gradle
+++ b/app/src/build.gradle
@@ -1,28 +1,22 @@
-group "com.manocraft"
-version "0.0.1-T"
-
-ext {
-	lwjglVersion = "3.3.3"
-	lwjglNatives = "natives-linux"
-}
-
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")
+	implementation platform("org.lwjgl:lwjgl-bom:3.3.4")
 
-	def lwjglModules = [
-		"lwjgl",
-		"opengl",
-		"glfw"
-	]
-	
-	lwjglModules.each { module ->
-		implementation "org.lwjgl:$module"
-		runtimeOnly "org.lwjgl:$module::$lwjglNatives"
-	}
+	implementation "org.lwjgl:lwjgl"
+	implementation "org.lwjgl:lwjgl-assimp"
+	implementation "org.lwjgl:lwjgl-glfw"
+	implementation "org.lwjgl:lwjgl-openal"
+	implementation "org.lwjgl:lwjgl-opengl"
+	implementation "org.lwjgl:lwjgl-stb"
+	runtimeOnly "org.lwjgl:lwjgl::natives-linux"
+	runtimeOnly "org.lwjgl:lwjgl-assimp::natives-linux"
+	runtimeOnly "org.lwjgl:lwjgl-glfw::natives-linux"
+	runtimeOnly "org.lwjgl:lwjgl-openal::natives-linux"
+	runtimeOnly "org.lwjgl:lwjgl-opengl::natives-linux"
+	runtimeOnly "org.lwjgl:lwjgl-stb::natives-linux"
 }
 
 application {
