--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -25,4 +25,4 @@ jobs:
         uses: actions/upload-artifact@v4.3.3
         with:
           name: Source
-          path: .
+          path: ./build/libs/ManoCraft.jar
