--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,15 @@
 plugins {
 	id "java"
 	id "application"
+	id "com.github.johnrengelman.shadow" version "7.1.0"
 }
 
 repositories {
 	mavenCentral()
+}
+
+shadowJar {
+    archiveClassifier.set("")
 }
 
 dependencies {
@@ -26,4 +31,8 @@ dependencies {
 
 application {
 	mainClassName = "com.manocraft.Main"
+}
+
+jar {
+    manifest "Main-Class": "com.manocraft.Main"
 }
