--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,7 @@ application {
 }
 
 jar {
-    manifest "Main-Class": "com.manocraft.Main"
+    manifest {
+        attributes "Main-Class": "com.manocraft.Main"
+    }
 }
