--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,12 @@ repositories {
 
 shadowJar {
     archiveClassifier.set("")
+    
+    manifest {
+        attributes (
+            "Main-Class": "com.manocraft.Main"
+        )
+    }
 }
 
 dependencies {
