--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -19,7 +19,7 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
       - name: Build with Gradle
         run: |
-          ./gradlew shadowJar
+          gradle shadowJar
       - name: Upload Artifact
         uses: actions/upload-artifact@v4.3.3
         with:
