--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -13,13 +13,14 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v4.2.1
         with:
-          java-version: "21"
-          distribution: "temurin"
+          java-version: "22"
+          distribution: "oracle"
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
       - name: Build with Gradle
         run: |
           gradle shadowJar
+      - name: 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4.3.3
         with:
