--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -18,8 +18,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
       - name: Build with Gradle
-        run: |
-          gradle shadowJar
+        run: gradle shadowJar
       - name: 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4.3.3
