--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,7 +1,6 @@
 name: Compile JAR
 
-on:
-  workflow_dispatch:
+on: workflow_dispatch
 
 jobs:
   build:
@@ -24,4 +23,4 @@ jobs:
         uses: actions/upload-artifact@v4.3.3
         with:
           name: ManoCraft_Build
-          path: ./build/libs/ManoCraft.jar
+          path: "build/libs/ManoCraft.jar"
